# osm-poi-europe

./: .gitignore  README.md  config.ini  getdata.py  mib2high.py  mib2tsd.py  mypois.py  poifix.py  pyproject.toml  renovate.json  utils.py  version.py
.github/workflows/: build_release_cleanup.yaml
img_base/: circle.xcf  square.xcf  triangle.xcf
template/PersonalPOI/MIB2/: metainfo2.txt
template/PersonalPOI/MIB2/MIB2HIGH/: metainfo2.txt
